fix: fixed overflow of tab in mobile view

--- a/src/Components/Filter/Filter.scss
+++ b/src/Components/Filter/Filter.scss
@@ -157,7 +157,7 @@
       margin-right: 0;
       li {
         a {
-          margin-right: 3px;
+          margin-right: 0 !important;
           font-size: 11px;
         }
       }
